# Roxy-v2-

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LIVE2D_DESIGN.md  LIVE2D_PLAN.md  PROGRESS.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  sample.txt  test_asr.py  test_bug_fixes.py
.claude/: settings.local.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/contexts/: ChatHistoryContext.tsx  DebugContext.tsx  LanguageContext.tsx  NotebookContext.tsx  SettingsContext.tsx  SidebarContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/i18n/: index.ts
frontend/src/live2d/: Live2DRenderer.tsx
frontend/src/styles/: animations.css  galgame.css  notebook.css  transitions.css  variables.css
frontend/src/types/: index.ts  notebook.ts
frontend/src/utils/: AudioProcessor.ts  AudioRecorder.ts
src/nakari/: __main__.py  cli.py  config.py  context.py  journal.py  llm.py  loop.py  mailbox.py  memory.py  models.py  prompt.py  timer.py  tool_registry.py  tts.py
src/nakari/api/: __init__.py  app.py  config.py  routes.py  server.py  websocket.py
src/nakari/emotion/: __init__.py  analyzer.py  mapper.py
src/nakari/frontend_adapter/: __init__.py  audio_interceptor.py  input.py  output.py  state_emitter.py
src/nakari/tools/: asr_tools.py  context_tools.py  journal_tools.py  live2d_tools.py  mailbox_tools.py  memory_tools.py  reply_tool.py  timer_tools.py  web_tools.py
tests/: test_api_routes.py  test_journal.py  test_tts.py
(+37 files in other folders)
