[project]
name = "nakari"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "neo4j>=5.26.0",
    "structlog>=24.4.0",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
    "edge-tts>=6.1.0",
    "aiohttp>=3.8.0",
    "aiosqlite>=0.17.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
local-asr = [
    "faster-whisper>=1.0.0",
]

[project.scripts]
nakari = "nakari.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nakari"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
